syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.londonsmartcity.environment";
option java_outer_classname = "EnvironmentServiceProto";

package environment;

// Environmental Monitoring Service
service EnvironmentService {
  // Get current environmental readings for a location
  rpc GetEnvironmentalData (EnvironmentalDataRequest) returns (EnvironmentalDataResponse) {}
  
  // Report air quality alert
  rpc ReportAirQualityAlert (AirQualityAlert) returns (AlertResponse) {}
  
  // Get historical environmental data
  rpc GetHistoricalData (HistoricalDataRequest) returns (HistoricalDataResponse) {}
  
  // Stream real-time environmental updates
  rpc StreamEnvironmentalUpdates (EnvironmentalUpdateRequest) returns (stream EnvironmentalUpdate) {}
}

message EnvironmentalDataRequest {
  string location_id = 1;
  double latitude = 2;
  double longitude = 3;
}

message EnvironmentalDataResponse {
  string location_id = 1;
  double temperature = 2;      // in Celsius
  double humidity = 3;         // percentage
  double air_quality_index = 4; // AQI value
  double noise_level = 5;      // in dB
  double co2_level = 6;        // in ppm
  string timestamp = 7;
}

message AirQualityAlert {
  string location_id = 1;
  string alert_type = 2;       // "HIGH_POLLUTION", "SMOG", "DUST"
  string severity = 3;         // "LOW", "MODERATE", "HIGH"
  string description = 4;
  double latitude = 5;
  double longitude = 6;
}

message AlertResponse {
  bool success = 1;
  string message = 2;
  string alert_id = 3;
}

message HistoricalDataRequest {
  string location_id = 1;
  string start_time = 2;
  string end_time = 3;
  string metric = 4;          // "TEMPERATURE", "HUMIDITY", "AIR_QUALITY", "NOISE", "CO2"
}

message HistoricalDataResponse {
  string location_id = 1;
  string metric = 2;
  repeated DataPoint data_points = 3;
}

message DataPoint {
  string timestamp = 1;
  double value = 2;
}

message EnvironmentalUpdateRequest {
  string location_id = 1;
  bool subscribe = 2;
}

message EnvironmentalUpdate {
  string location_id = 1;
  double temperature = 2;
  double humidity = 3;
  double air_quality_index = 4;
  double noise_level = 5;
  double co2_level = 6;
  string timestamp = 7;
  repeated string active_alerts = 8;
} 